// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svgr > 'configure SVGR options' 1`] = `
{
  "oneOf": [
    {
      "generator": {
        "filename": "static/svg/[name].[contenthash:8].svg",
      },
      "resourceQuery": /\\(__inline=false\\|url\\)/,
      "type": "asset/resource",
    },
    {
      "resourceQuery": /inline/,
      "type": "asset/inline",
    },
    {
      "resourceQuery": /react/,
      "type": "javascript/auto",
      "use": [
        {
          "loader": "builtin:swc-loader",
          "options": {
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "shippedProposals": true,
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "isModule": "unknown",
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "development": false,
                  "refresh": true,
                  "runtime": "automatic",
                },
                "useDefineForClassFields": false,
              },
            },
            "sourceMaps": true,
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/src/loader",
          "options": {
            "exportType": "default",
            "svgo": true,
            "svgoConfig": {
              "datauri": "base64",
              "plugins": [
                {
                  "name": "preset-default",
                  "params": {
                    "overrides": {
                      "removeViewBox": false,
                    },
                  },
                },
                "prefixIds",
              ],
            },
          },
        },
      ],
    },
    {
      "generator": {
        "filename": "static/svg/[name].[contenthash:8].svg",
      },
      "issuer": {
        "not": [
          /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        ],
      },
      "parser": {
        "dataUrlCondition": {
          "maxSize": 10000,
        },
      },
      "type": "asset",
    },
    {
      "type": "javascript/auto",
      "use": [
        {
          "loader": "builtin:swc-loader",
          "options": {
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "shippedProposals": true,
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "isModule": "unknown",
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "development": false,
                  "refresh": true,
                  "runtime": "automatic",
                },
                "useDefineForClassFields": false,
              },
            },
            "sourceMaps": true,
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/src/loader",
          "options": {
            "exportType": "named",
            "svgo": true,
            "svgoConfig": {
              "datauri": "base64",
              "plugins": [
                {
                  "name": "preset-default",
                  "params": {
                    "overrides": {
                      "removeViewBox": false,
                    },
                  },
                },
                "prefixIds",
              ],
            },
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/compiled/url-loader",
          "options": {
            "limit": 10000,
            "name": "static/svg/[name].[contenthash:8].svg",
          },
        },
      ],
    },
  ],
  "test": /\\\\\\.svg\\$/,
}
`;

exports[`svgr > 'export default Component' 1`] = `
{
  "oneOf": [
    {
      "generator": {
        "filename": "static/svg/[name].[contenthash:8].svg",
      },
      "resourceQuery": /\\(__inline=false\\|url\\)/,
      "type": "asset/resource",
    },
    {
      "resourceQuery": /inline/,
      "type": "asset/inline",
    },
    {
      "resourceQuery": /react/,
      "type": "javascript/auto",
      "use": [
        {
          "loader": "builtin:swc-loader",
          "options": {
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "shippedProposals": true,
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "isModule": "unknown",
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "development": false,
                  "refresh": true,
                  "runtime": "automatic",
                },
                "useDefineForClassFields": false,
              },
            },
            "sourceMaps": true,
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/src/loader",
          "options": {
            "exportType": "default",
            "svgo": true,
            "svgoConfig": {
              "plugins": [
                {
                  "name": "preset-default",
                  "params": {
                    "overrides": {
                      "removeViewBox": false,
                    },
                  },
                },
                "prefixIds",
              ],
            },
          },
        },
      ],
    },
    {
      "generator": {
        "filename": "static/svg/[name].[contenthash:8].svg",
      },
      "issuer": {
        "not": [
          /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        ],
      },
      "parser": {
        "dataUrlCondition": {
          "maxSize": 10000,
        },
      },
      "type": "asset",
    },
    {
      "type": "javascript/auto",
      "use": [
        {
          "loader": "builtin:swc-loader",
          "options": {
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "shippedProposals": true,
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "isModule": "unknown",
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "development": false,
                  "refresh": true,
                  "runtime": "automatic",
                },
                "useDefineForClassFields": false,
              },
            },
            "sourceMaps": true,
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/src/loader",
          "options": {
            "exportType": "default",
            "svgo": true,
            "svgoConfig": {
              "plugins": [
                {
                  "name": "preset-default",
                  "params": {
                    "overrides": {
                      "removeViewBox": false,
                    },
                  },
                },
                "prefixIds",
              ],
            },
          },
        },
      ],
    },
  ],
  "test": /\\\\\\.svg\\$/,
}
`;

exports[`svgr > 'export default url' 1`] = `
{
  "oneOf": [
    {
      "generator": {
        "filename": "static/svg/[name].[contenthash:8].svg",
      },
      "resourceQuery": /\\(__inline=false\\|url\\)/,
      "type": "asset/resource",
    },
    {
      "resourceQuery": /inline/,
      "type": "asset/inline",
    },
    {
      "resourceQuery": /react/,
      "type": "javascript/auto",
      "use": [
        {
          "loader": "builtin:swc-loader",
          "options": {
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "shippedProposals": true,
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "isModule": "unknown",
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "development": false,
                  "refresh": true,
                  "runtime": "automatic",
                },
                "useDefineForClassFields": false,
              },
            },
            "sourceMaps": true,
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/src/loader",
          "options": {
            "exportType": "default",
            "svgo": true,
            "svgoConfig": {
              "plugins": [
                {
                  "name": "preset-default",
                  "params": {
                    "overrides": {
                      "removeViewBox": false,
                    },
                  },
                },
                "prefixIds",
              ],
            },
          },
        },
      ],
    },
    {
      "generator": {
        "filename": "static/svg/[name].[contenthash:8].svg",
      },
      "issuer": {
        "not": [
          /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
        ],
      },
      "parser": {
        "dataUrlCondition": {
          "maxSize": 10000,
        },
      },
      "type": "asset",
    },
    {
      "type": "javascript/auto",
      "use": [
        {
          "loader": "builtin:swc-loader",
          "options": {
            "env": {
              "coreJs": "3.32",
              "mode": "usage",
              "shippedProposals": true,
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
            },
            "isModule": "unknown",
            "jsc": {
              "externalHelpers": true,
              "parser": {
                "decorators": true,
                "syntax": "typescript",
                "tsx": true,
              },
              "preserveAllComments": true,
              "transform": {
                "decoratorMetadata": true,
                "legacyDecorator": true,
                "react": {
                  "development": false,
                  "refresh": true,
                  "runtime": "automatic",
                },
                "useDefineForClassFields": false,
              },
            },
            "sourceMaps": true,
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/src/loader",
          "options": {
            "exportType": "named",
            "svgo": true,
            "svgoConfig": {
              "plugins": [
                {
                  "name": "preset-default",
                  "params": {
                    "overrides": {
                      "removeViewBox": false,
                    },
                  },
                },
                "prefixIds",
              ],
            },
          },
        },
        {
          "loader": "<ROOT>/packages/plugin-svgr/compiled/url-loader",
          "options": {
            "limit": 10000,
            "name": "static/svg/[name].[contenthash:8].svg",
          },
        },
      ],
    },
  ],
  "test": /\\\\\\.svg\\$/,
}
`;
